--- a/app/src/main/res/layout/fragment_moving.xml
+++ b/app/src/main/res/layout/fragment_moving.xml
@@ -318,7 +318,8 @@
                 app:boxBackgroundColor="@color/white"
                 app:boxStrokeColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@+id/userButton2"
-                tools:layout_editor_absoluteX="23dp">
+                tools:layout_editor_absoluteX="23dp"
+                app:hintEnabled="false">
 
                 <AutoCompleteTextView
                     android:id="@+id/auto_complete_txt"
