--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="100dp">
 
             <TextView
                 android:id="@+id/welcomText"
@@ -131,9 +132,9 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="20dp"
                 android:text="Nadchodzące wydarzenia"
+                android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="14sp"
-                android:textAlignment="center"
                 app:layout_constraintStart_toStartOf="@+id/welcomText"
                 app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                 tools:ignore="MissingConstraints" />
@@ -154,9 +155,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="113dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="100dp"
                 android:background="@color/lightgrey2"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.4"
                 app:layout_constraintStart_toStartOf="parent"
